--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,13 @@
     900: '#131517'
   }
 }
+
+/* En tu archivo global CSS o dentro de tailwind.config.js como plugin */
+.scroll-hidden::-webkit-scrollbar {
+  display: none;
+}
+
+.scroll-hidden {
+  -ms-overflow-style: none;  /* IE y Edge */
+  scrollbar-width: none;     /* Firefox */
+}
